Fixed some tests pt.2